feat: send email on create user